# GameOfLife

./: .gitignore  CMakeLists.txt
Docs/: Doxyfile
include/: GameOfLife.h  ScreenPrinter.h  mainpage.dox
include/Cell_Culture/: Cell.h  Population.h
include/GoL_Rules/: RuleFactory.h  RuleOfExistence.h  RuleOfExistence_Conway.h  RuleOfExistence_Erik.h  RuleOfExistence_VonNeumann.h
include/Support/: FileLoader.h  Globals.h  MainArguments.h  MainArgumentsParser.h  SupportStructures.h
src/: ScreenPrinter.cpp
src/Cell_Culture/: Population.cpp
test/: GameOfLife-Test.cpp  main-test.cpp
